- Fix some warnings from ggplot2 3.0.0.

Release v1.4.0

- Allow custom y-axis label and scale
- Keep spaces in set names when filling empty intersections
- fixed bug for single set (degree of 1) intersection query when using fromExpression
- Changed point shape to 16
- Include set_size.show paramter and added documentation

-----------------

Release v1.3.3

- Made element query compatible with check.names
- Removed border from active query bars
- Adjusted metadata heatmap and text title positions (centered title and removed 90 degree rotation)

-----------------

Release v1.3.2

- Update logarithmic axis and bar labels
- Allow decimal values for log scales
- Set intersection size axis min to 0 for log scales

-----------------

Release v1.3.1

- Fixed log scale bugs
- Allow users to label their own queries, which can be displayed in query legend
- Fixed query legend positioning bug. Allows query legend to be placed on top or bottom of plot grid
- Fixed warnings and notes from new ggplot2 release
- Updated plot margin of intersection size bar plot

-----------------

Release v1.3.0

- Introduced text scales for all plot axis labels, tick labels, set names, and numbers above the bars
- Removed names.size parameter and replaced it with a text scale
- Fixed vignettes so plot size and text is appropriately scaled

-----------------

Release v1.2.4

- Fixed check.names bug so that it reorders the set size bar plot, not just the set labels
- Show all intersections when nintersects is set to NA

-----------------

Release v1.2.3

- Allow user to keep order of sets entered when using sets parameter
- Updated Basic Usage vignette with example on how to do this

-----------------

Release v1.2.2

- Support for log10 and log2 scale transformations 

-----------------

Release v1.2.1

- Updated vignettes
- Adjusted metadata plot text size for ggplot2 update
- Default gray88 color if matrix_rows metadata attribute used and no colors supplied