@@ -29,6 +29,5 @@ importFrom(grid,legendGrob)
 importFrom(grid,popViewport)
 importFrom(grid,pushViewport)
 importFrom(grid,viewport)
-importFrom(plyr,count)
 importFrom(rlang,"%||%")
 importFrom(rlang,.data)
